[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "This is the python template"
authors = ["Your Name <you@example.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
scipy = "^1.7.2"
numpy = "^1.21.4"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
